<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".Activity.DangKi">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Đăng Kí"
        android:textColor="#2658F1"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nhaptentaikhoan_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/nhapthongtin"
            android:hint="@string/edttentaikhoan"
            android:padding="10dp" />

        <EditText
            android:id="@+id/hovaten_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/nhapthongtin"
            android:hint="@string/edthovaten"
            android:padding="10dp" />

        <EditText
            android:id="@+id/sodienthoai_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/nhapthongtin"
            android:hint="@string/edtsodienthoai"
            android:padding="10dp" />

        <EditText
            android:id="@+id/diachi_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/nhapthongtin"
            android:hint="@string/edtdiachi"
            android:padding="10dp" />

        <EditText
            android:id="@+id/matkhau_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/nhapthongtin"
            android:hint="@string/edtmatkhau"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/nhaplaimatkhau_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/nhapthongtin"
            android:hint="@string/edtnhaplaimatkhau"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/email_DK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/nhapthongtin"
            android:hint="email"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTieptuc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnTieptuc" />

        <Button
            android:id="@+id/btnHuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnHuy"
            android:layout_marginLeft="50dp"/>
    </LinearLayout>

</LinearLayout>